--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,13 @@
 {
-  "singleQuote": true,
-  "printWidth": 120,
-  "tabWidth": 4,
-  "useTabs": false,
-  "bracketSpacing": true
+    "singleQuote": true,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "useTabs": false,
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "plugins": ["prettier-plugin-svelte"],
+    "svelteStrictMode": false,
+    "svelteBracketNewLine": true,
+    "svelteIndentScriptAndStyle": true,
+    "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
