--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
         "@sveltejs/vite-plugin-svelte": "^6.1.1",
         "@tsconfig/svelte": "^5.0.4",
         "eslint": "^9.34.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-svelte": "^3.12.0",
         "globals": "^16.3.0",
+        "prettier": "^3.6.2",
+        "prettier-plugin-svelte": "^3.4.0",
         "svelte": "^5.38.1",
         "svelte-check": "^4.3.1",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.42.0",
         "vite": "^7.1.2"
+    },
+    "dependencies": {
+        "modern-normalize": "^3.0.1"
     }
 }
