--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,5 +11,5 @@
     "isolatedModules": true,
     "moduleDetection": "force"
   },
-  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "src/assets/svelte.svg"],
 }
